chore: various modifications to the chart
